layout and partial views, view components, _ViewStart and _ViewImport added

--- a/AspNetCoreVideo/Views/Home/Details.cshtml
+++ b/AspNetCoreVideo/Views/Home/Details.cshtml
@@ -1,15 +1,11 @@
-﻿@model AspNetCoreVideo.ViewModels.VideoViewModel
+﻿@model VideoViewModel
+@{
+    ViewBag.Title = "Details";
+}
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>Video</title>
-</head>
-<body>
 <div> ID: @Model.Id</div>
 <div> Title: @Model.Title</div>
 <div> Genre: @Model.Genre</div>
-</body>
 @Html.ActionLink("Home", "Index")
-</html>
+@section footer{
+    <div>This is the Details footer</div>}
