--- a/AspNetCoreVideo/Views/Home/Index.cshtml
+++ b/AspNetCoreVideo/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     @Html.Partial("_Video", video)
 }
 <div>
-    <a asp-action="Create">Create</a>
+    <a asp-action="Create" class="btn btn-success">Create</a>
 </div>
