--- a/AspNetCoreVideo/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreVideo/Views/Shared/_Layout.cshtml
@@ -4,17 +4,36 @@
 <head>
     <meta name="viewport" content="width=device-width"/>
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+          asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
 </head>
 <body>
-<div>
-    <div>
-        @await Html.PartialAsync("_LoginLinks")
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Video Application</a>
+        </div>
+        <div class="navbar navbar-nav pull-right">
+            @await Html.PartialAsync("_LoginLinks")
+        </div>
     </div>
+</nav>
+<div>
     @RenderBody()
 </div>
 <footer>
     @RenderSection("footer", false)
     @await Component.InvokeAsync("Message")
 </footer>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+        asp-fallback-test="window.jQuery"
+        crossorigin="anonymous"
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+</script>
+<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+        asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+        crossorigin="anonymous"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+</script>
 </body>
 </html>
