--- a/AspNetCoreVideo/Views/Shared/_LoginLinks.cshtml
+++ b/AspNetCoreVideo/Views/Shared/_LoginLinks.cshtml
@@ -2,17 +2,15 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-@if (SignInManager.IsSignedIn(User))
+@if (SignInManager.IsSignedIn(User)) //signed-in user
 {
-    //signed-in user
-    <div>@User.Identity.Name</div>
     <form method="post" asp-controller="Account" asp-action="Logout">
-        <input type="submit" value="Logout"/>
+        @User.Identity.Name
+        <input type="submit" value="Logout" class="navbar-btn btn btn-danger"/>
     </form>
 }
-else
+else //anonymous user
 {
-    //anonymous user
-    <a asp-controller="Account" asp-action="Login">Login</a>
-    <a asp-controller="Account" asp-action="Register">Register</a>
+    <a asp-controller="Account" asp-action="Login" class="btn btn-xs btn-default navbar-btn">Login</a>
+    <a asp-controller="Account" asp-action="Register" class="btn btn-xs btn-default navbar-btn">Register</a>
 }
